@@ -7,6 +7,7 @@ import cl.transbank.model.Options;
 import cl.transbank.model.WebpayApiRequest;
 import cl.transbank.webpay.common.WebpayOptions;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collections;
 import java.util.HashMap;
@@ -20,100 +21,119 @@ import lombok.Setter;
  */
 public abstract class WebpayApiResource {
 
+  private static final class RequestContext {
+    private final String urlBase;
+    private final Map<String, String> headers;
+
+    private RequestContext(String urlBase, Map<String, String> headers) {
+      this.urlBase = urlBase;
+      this.headers = headers;
+    }
+  }
+
   @Getter
   @Setter
   private static HttpUtil httpUtil = HttpUtilImpl.getInstance();
 
   /**
    * Builds the headers for a Webpay API request.
+   * 
    * @param options The options for the request.
    * @return A map of headers for the request.
    */
   public static Map<String, String> buildHeaders(Options options) {
-    if (null == options) return Collections.emptyMap();
+    if (options == null)
+      return Collections.emptyMap();
 
     Map<String, String> headers = new HashMap<>();
     headers.put(
-      ApiConstants.HEADER_COMMERCE_CODE_NAME,
-      options.getCommerceCode()
-    );
+        ApiConstants.HEADER_COMMERCE_CODE_NAME,
+        options.getCommerceCode());
     headers.put(ApiConstants.HEADER_API_KEY_NAME, options.getApiKey());
 
     return headers;
   }
 
   /**
-   * Executes a Webpay API request.
-   * @param <T> The type of the response.
-   * @param endpoint The endpoint for the request.
-   * @param method The HTTP method for the request.
+   * Builds the headers for a Patpass API request.
+   * 
    * @param options The options for the request.
-   * @param clazz The class of the response.
+   * @return A map of headers for the request.
+   */
+  public static Map<String, String> buildPatpassHeaders(Options options) {
+    if (options == null)
+      return Collections.emptyMap();
+
+    Map<String, String> headers = new HashMap<>();
+    headers.put(
+        ApiConstants.HEADER_PATPASS_COMMERCE_CODE_NAME,
+        options.getCommerceCode());
+    headers.put(ApiConstants.HEADER_PATPASS_API_KEY_NAME, options.getApiKey());
+
+    return headers;
+  }
+
+  /**
+   * Executes a Webpay API request.
+   * 
+   * @param <T>      The type of the response.
+   * @param endpoint The endpoint for the request.
+   * @param method   The HTTP method for the request.
+   * @param options  The options for the request.
+   * @param clazz    The class of the response.
    * @return The response to the request.
    * @throws TransbankException If an error occurs during the request.
-   * @throws IOException If an error occurs during the request.
+   * @throws IOException        If an error occurs during the request.
    */
   public static <T> T execute(
-    final String endpoint,
-    HttpUtil.RequestMethod method,
-    final Options options,
-    Class<T> clazz
-  ) throws TransbankException, IOException {
+      final String endpoint,
+      HttpUtil.RequestMethod method,
+      final Options options,
+      Class<T> clazz) throws TransbankException, IOException {
     return execute(endpoint, method, null, options, clazz);
   }
 
   /**
    * Executes a Webpay API request with a request body.
-   * @param <T> The type of the response.
+   * 
+   * @param <T>      The type of the response.
    * @param endpoint The endpoint for the request.
-   * @param method The HTTP method for the request.
-   * @param request The request body.
-   * @param options The options for the request.
+   * @param method   The HTTP method for the request.
+   * @param request  The request body.
+   * @param options  The options for the request.
    * @return The response to the request.
    * @throws TransbankException If an error occurs during the request.
-   * @throws IOException If an error occurs during the request.
+   * @throws IOException        If an error occurs during the request.
    */
   public static <T> T execute(
-    final String endpoint,
-    HttpUtil.RequestMethod method,
-    final WebpayApiRequest request,
-    final Options options
-  ) throws TransbankException, IOException {
+      final String endpoint,
+      HttpUtil.RequestMethod method,
+      final WebpayApiRequest request,
+      final Options options) throws TransbankException, IOException {
     return execute(endpoint, method, request, options, null);
   }
 
   /**
    * Executes a Webpay API request with a request body.
-   * @param <T> The type of the response.
+   * 
+   * @param <T>      The type of the response.
    * @param endpoint The endpoint for the request.
-   * @param method The HTTP method for the request.
-   * @param request The request body.
-   * @param options The options for the request.
-   * @param clazz The class of the response.
+   * @param method   The HTTP method for the request.
+   * @param request  The request body.
+   * @param options  The options for the request.
+   * @param clazz    The class of the response.
    * @return The response to the request.
    * @throws TransbankException If an error occurs during the request.
-   * @throws IOException If an error occurs during the request.
+   * @throws IOException        If an error occurs during the request.
    */
   public static <T> T execute(
-    final String endpoint,
-    HttpUtil.RequestMethod method,
-    final WebpayApiRequest request,
-    final Options options,
-    Class<T> clazz
-  ) throws TransbankException, IOException {
-    String urlBase = null;
-    if (options instanceof WebpayOptions) {
-      urlBase =
-        IntegrationTypeHelper.getWebpayIntegrationType(
-          options.getIntegrationType()
-        );
-    } else {
-      urlBase =
-        IntegrationTypeHelper.getPatpassIntegrationType(
-          options.getIntegrationType()
-        );
-    }
-    final URL url = new URL(String.format("%s/%s", urlBase, endpoint));
+      final String endpoint,
+      HttpUtil.RequestMethod method,
+      final WebpayApiRequest request,
+      final Options options,
+      Class<T> clazz) throws TransbankException, IOException {
+    RequestContext requestContext = WebpayApiResource.buildRequestContext(options);
+    final URL url = URI.create(String.format("%s/%s", requestContext.urlBase, endpoint)).toURL();
 
     HttpUtil requestInstance = WebpayApiResource.getHttpUtil();
 
@@ -121,72 +141,63 @@ public abstract class WebpayApiResource {
     requestInstance.setReadTimeout(options.getTimeout());
 
     final T out = requestInstance.request(
-      url,
-      method,
-      request,
-      WebpayApiResource.buildHeaders(options),
-      clazz
-    );
+        url,
+        method,
+        request,
+        requestContext.headers,
+        clazz);
 
-    if (null == out) return null;
+    if (out == null)
+      return null;
 
-    if (null == clazz) return null;
+    if (clazz == null)
+      return null;
 
     return out;
   }
 
   /**
    * Executes a Webpay API request and returns a list of responses.
-   * @param <T> The type of the response.
+   * 
+   * @param <T>      The type of the response.
    * @param endpoint The endpoint for the request.
-   * @param method The HTTP method for the request.
-   * @param options The options for the request.
-   * @param clazz The class of the response.
+   * @param method   The HTTP method for the request.
+   * @param options  The options for the request.
+   * @param clazz    The class of the response.
    * @return A list of responses to the request.
    * @throws TransbankException If an error occurs during the request.
-   * @throws IOException If an error occurs during the request.
+   * @throws IOException        If an error occurs during the request.
    */
   public static <T> List<T> executeToList(
-    final String endpoint,
-    HttpUtil.RequestMethod method,
-    final Options options,
-    Class<T[]> clazz
-  ) throws TransbankException, IOException {
+      final String endpoint,
+      HttpUtil.RequestMethod method,
+      final Options options,
+      Class<T[]> clazz) throws TransbankException, IOException {
     return executeToList(endpoint, method, null, options, clazz);
   }
 
   /**
-   * Executes a Webpay API request with a request body and returns a list of responses.
-   * @param <T> The type of the response.
+   * Executes a Webpay API request with a request body and returns a list of
+   * responses.
+   * 
+   * @param <T>      The type of the response.
    * @param endpoint The endpoint for the request.
-   * @param method The HTTP method for the request.
-   * @param request The request body.
-   * @param options The options for the request.
-   * @param clazz The class of the response.
+   * @param method   The HTTP method for the request.
+   * @param request  The request body.
+   * @param options  The options for the request.
+   * @param clazz    The class of the response.
    * @return A list of responses to the request.
    * @throws TransbankException If an error occurs during the request.
-   * @throws IOException If an error occurs during the request.
+   * @throws IOException        If an error occurs during the request.
    */
   public static <T> List<T> executeToList(
-    final String endpoint,
-    HttpUtil.RequestMethod method,
-    final WebpayApiRequest request,
-    final Options options,
-    Class<T[]> clazz
-  ) throws TransbankException, IOException {
-    String urlBase = null;
-    if (options instanceof WebpayOptions) {
-      urlBase =
-        IntegrationTypeHelper.getWebpayIntegrationType(
-          options.getIntegrationType()
-        );
-    } else {
-      urlBase =
-        IntegrationTypeHelper.getPatpassIntegrationType(
-          options.getIntegrationType()
-        );
-    }
-    final URL url = new URL(String.format("%s/%s", urlBase, endpoint));
+      final String endpoint,
+      HttpUtil.RequestMethod method,
+      final WebpayApiRequest request,
+      final Options options,
+      Class<T[]> clazz) throws TransbankException, IOException {
+    RequestContext requestContext = WebpayApiResource.buildRequestContext(options);
+    final URL url = URI.create(String.format("%s/%s", requestContext.urlBase, endpoint)).toURL();
 
     HttpUtil requestInstance = WebpayApiResource.getHttpUtil();
 
@@ -194,17 +205,30 @@ public abstract class WebpayApiResource {
     requestInstance.setReadTimeout(options.getTimeout());
 
     final List<T> out = requestInstance.requestList(
-      url,
-      method,
-      request,
-      WebpayApiResource.buildHeaders(options),
-      clazz
-    );
+        url,
+        method,
+        request,
+        requestContext.headers,
+        clazz);
 
-    if (null == out) return Collections.emptyList();
+    if (out == null)
+      return Collections.emptyList();
 
-    if (null == clazz) return Collections.emptyList();
+    if (clazz == null)
+      return Collections.emptyList();
 
     return out;
+  }
+
+  private static RequestContext buildRequestContext(Options options) {
+    if (options instanceof WebpayOptions) {
+      return new RequestContext(
+          IntegrationTypeHelper.getWebpayIntegrationType(options.getIntegrationType()),
+          WebpayApiResource.buildHeaders(options));
+    }
+
+    return new RequestContext(
+        IntegrationTypeHelper.getPatpassIntegrationType(options.getIntegrationType()),
+        WebpayApiResource.buildPatpassHeaders(options));
   }
 }
